# url-shortener

./: Cargo.toml  Jenkinsfile  README.md  Rocket.toml  index.html
src/: main.rs
www/: index.html
www/assets/css/: material-kit.css
