[package]
name = "short_url"
version = "0.1.0"
authors = ["ben"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0.125"
random-string = "0.2.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["sync"]
